# pretalx-openmetrics

./: LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg
.github/workflows/: style.yml
pretalx_openmetrics/: apps.py  models.py  signals.py  urls.py  views.py
pretalx_openmetrics/migrations/: 0001_initial.py
pretalx_openmetrics/templates/pretalx_openmetrics/: settings.html
